--- a/DostavkaNaMarket/Pages/Index.razor
+++ b/DostavkaNaMarket/Pages/Index.razor
@@ -1,32 +1,33 @@
 ﻿@page "/"
 @using DostavkaNaMarket.Data
+@using DostavkaNaMarket.Models
 
 
 <PageTitle>Добавить поставку</PageTitle>
 
 <body>
-    
+<EditForm Model="user" OnValidSubmit="Create">
+<DataAnnotationsValidator/>    
 <div class="container">
   <main>
-
     <div class="row g-5">
-      
       <div class="col-md-7 col-lg-8">
         <h4 class="mb-3">Данные поставки</h4>
         <form class="needs-validation" novalidate="">
           <div class="row g-3">
             <div class="col-3">
               <label for="city" class="form-label">Город</label>
-              <select class="form-select" id="city" required="">
-                <option>Владимир</option>
-                <option>Иваново</option>
-                <option>Муром</option>
-                <option>Ковров</option>
-              </select>
+              <InputSelect class="form-select" @bind-Value="user.CitySell">
+                <option value="@User.City.Владимир">Владимир</option>
+                <option value="@User.City.Иваново">Иваново</option>
+                <option value="@User.City.Муром">Муром</option>
+                <option value="@User.City.Ковров">Ковров</option>
+              </InputSelect>
               <div class="invalid-feedback">
                 Please select a valid country.
               </div>
             </div>
+            <p> test: @user.CitySell</p>
 
             @{
                 DateTime date = DateTime.Now;
@@ -68,47 +69,42 @@
                     dateMonday = date.AddDays(1);
                 }
             }
-
-           
-
+            @{
+                user.DateDelivery();
+            }
             <div class="col-12">
                 <label for="warehouse" class="form-label">Отправить в</label>
                 <div class="col-12">
+                    <InputRadioGroup Name="radio-overview-1" @bind-Value="user.DateSell">
                     <div class="boxed-check-group boxed-check-outline-primary">
                         <label class="boxed-check boxed-check-inline">
-                            <input class="boxed-check-input" type="radio" name="radio-overview" Value="@dateMonday.ToString("dddd dd MMMM yyyy")"
-            @onchange="OnSelect">
-                            <div class="boxed-check-label">Коледино, @dateMonday.ToString("dddd dd MMMM yyyy")</div>
+                            <InputRadio class="boxed-check-input" type="radio" name="radio-overview-1" Value="@User.Date.Понедельник"/>
+                            <div class="boxed-check-label">Коледино, @user.dateMonday.ToString("dddd dd MMMM yyyy")</div>
                         </label>
                         <label class="boxed-check boxed-check-inline">
-                            <input class="boxed-check-input" type="radio" name="radio-overview" Value="@dateWednesday.ToString("dddd dd MMMM yyyy")"
-            @onchange="OnSelect">
-                            <div class="boxed-check-label">Электросталь, @dateWednesday.ToString("dddd dd MMMM yyyy")</div>
+                            <InputRadio class="boxed-check-input" type="radio" name="radio-overview-1" Value="@User.Date.Среда"/>
+                            <div class="boxed-check-label">Электросталь, @user.dateWednesday.ToString("dddd dd MMMM yyyy")</div>
                         </label>
                     </div>
+                    </InputRadioGroup>
                 </div>
             </div>
-           <p> test: @value</p>
-
-
+           <p> test: @user.DateSell</p>
 
             <div class="col-12">
               <label for="name" class="form-label">ФИО</label>
-              <input type="text" class="form-control" id="name" placeholder="Иванов Иван Иванович" value="" required="">
-              <div class="invalid-feedback">
-                Valid first name is required.
-              </div>
+              <InputText class="form-control" placeholder="Иванов Иван Иванович" @bind-Value="user.ClientName"/>
+              <ValidationMessage For="(() => user.ClientName)" />
             </div>
+            <p> test: @user.ClientName</p>
 
             <div class="col-6">
-              <label for="phoneNumber" class="form-label">Номер телефона</label>
-              <div class="input-group has-validation">
-                <span class="input-group-text">+7</span>
-                <input type="tel" class="form-control" id="phoneNumber" placeholder="9011418686" required="">
-              <div class="invalid-feedback">
-                  Your username is required.
+                <label for="phoneNumber" class="form-label">Номер телефона</label>
+                <div class="input-group has-validation">
+                    <span class="input-group-text">+7</span>
+                    <InputText class="form-control" placeholder="9011418686" @bind-Value="user.ClientPhone"/>
+                    <ValidationMessage For="(() => user.ClientPhone)" />
                 </div>
-              </div>
             </div>
 
             <div class="col-md-6">
@@ -119,18 +115,15 @@
               </div>
             </div>
 
-
-
-
              <div class="col-12">
                 <div class="col-12">
                     <div class="boxed-check-group boxed-check-outline-primary">
                         <label class="boxed-check boxed-check-inline">
-                            <input class="boxed-check-input" type="radio" name="radio-overview" Value="Sam" @onchange="OnSelected" checked>
+                            <input class="boxed-check-input" type="radio" name="radio-overview-2" Value="Sam" @onchange="OnSelected" checked>
                             <div class="boxed-check-label">Привезу самостоятельно</div>
                         </label>
                         <label class="boxed-check boxed-check-inline">
-                            <input class="boxed-check-input" type="radio" name="radio-overview" Value="Vivoz" @onchange="OnSelected">
+                            <input class="boxed-check-input" type="radio" name="radio-overview-2" Value="Vivoz" @onchange="OnSelected">
                             <div class="boxed-check-label">Мне нужен вывоз</div>
                         </label>
                     </div>
@@ -144,7 +137,6 @@
                 Please enter your shipping address.
               </div>
             </div>
-
 
             <div class="col-12">
                 <div class="col-6">
@@ -211,14 +203,20 @@
     <p class="mb-1">© 2021–2022 Доставка на маркет</p>
   </footer>
 </div>
-
+</EditForm>
 </body>
 
 @code{
-    // Дата отправки
-    private string value = "Дата не выбрана";
+    //private string value = "Дата не выбрана";
 
-    // Нужен ли вывоз или привезет сам
+
+    User user = new User();
+    void Create()
+    {
+        Console.WriteLine(user.ClientPhone);
+    }
+    
+
     private string values = "Sam";
     public Dictionary<string, object> InputAttributes { get; set; }
 
@@ -231,8 +229,19 @@
     private bool isChecked;
     public Dictionary<string, object> InputAttributesSubmit { get; set; }
 
-    public void OnSelect(Microsoft.AspNetCore.Components.ChangeEventArgs args) => value = (string)args.Value;
+    //public void CitySelect(Microsoft.AspNetCore.Components.ChangeEventArgs args) => user.CitySell = (string)args.Value;
 
+    // Дата отправки
+    //public void OnSelect(Microsoft.AspNetCore.Components.ChangeEventArgs args) => user.Value = (string)args.Value;
+
+    //public int Converting(string phone)
+    //{
+    //    phone = clientPhone;
+    //    int result = Convert.ToInt32(phone);
+    //    return result;
+    //}
+
+    // Нужен ли вывоз или привезет сам
     public void OnSelected(Microsoft.AspNetCore.Components.ChangeEventArgs args)
     {
         values = (string)args.Value;
@@ -292,16 +301,5 @@
         }
     }
 
-    //public void OnSubmit(Microsoft.AspNetCore.Components.ChangeEventArgs args)
-    //{
-    //    okSubmit = (string)args.Value;
-    //    if(okSubmit == "ok")
-    //    {
-    //        InputAttributes = new Dictionary<string, object>()
-    //        {
-    //            { "type", "submit" }
-    //        };
-    //    }
 
-    //}
 }
